ensure date centering on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@100;400;500&display=swap');
+
 @media (max-width: 700px) {
   .centered-logo {
     filter: none !important;
@@ -13,6 +13,10 @@
     background-clip: initial !important;
     -webkit-background-clip: initial !important;
     -webkit-text-fill-color: initial !important;
+    text-align: center !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    display: block !important;
   }
 }
 
